--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -7,5 +7,16 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="numberIn">
+       <item name="android:inputType">number</item>
+    </style>
+    <style name="buttons"  >
+        <!-- colour pink #FF00FF -->
+        <item name="android:background">@color/pink</item>
+        <item name="android:textColor">#0065FF</item>
+        <item name="android:textSize">@dimen/button_size</item>
+    </style>
+    <style name="buttons.alt" >
+        <item name="android:background">@color/pinkish</item>
+    </style>
 </resources>
