fix extra char in colors.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="pink">#FF00FF</color>
-    <color name="pinkish">#FF00AE</color>\
+    <color name="pinkish">#FF00AE</color>
 </resources>
